...
}

extension HomeRaces.Representable.RaceNext {
    static var mockFullList: [HomeRaces.Representable.RaceNext] {
        [
            .init(eta: "16:42", duration: "2h", name: "CRO Race - S1", category: "ME", raceType: "2.1", distance: "", urlPath: nil, flagCode: "hr", isLive: true),
            .init(eta: "17:20", duration: "2h", name: "Chrono des Nations", category: "ME", raceType: "1.1", distance: "", urlPath: nil, flagCode: "fr", isLive: false),
            .init(eta: "18:05", duration: "3h", name: "Coppa Bernocchi", category: "ME", raceType: "1.1", distance: "", urlPath: nil, flagCode: "it", isLive: true),
            .init(eta: "21:35", duration: "7h", name: "GP de Montréal", category: "ME", raceType: "1.UWT", distance: "", urlPath: nil, flagCode: "ca", isLive: false)
        ]
    }
}

...
